--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@
     flex: 0 0 100px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (width: 600px) {
     .image_flex img {
         flex: 0 0 90%;
     }
