--- a/index.css
+++ b/index.css
@@ -62,6 +62,7 @@ h1 {
     margin: 2px;
     margin-top: 40px;
     padding: 10px 20px;
+    text-align: center;
     width: max-content;
 }
 
@@ -73,6 +74,7 @@ h2 {
     margin: 2px;
     margin-top: 30px;
     padding: 10px 20px;
+    text-align: center;
     width: max-content;
 }
 
@@ -84,6 +86,7 @@ h3 {
     margin: 2px;
     margin-top: 20px;
     padding: 10px 20px;
+    text-align: center;
     width: max-content;
 }
 
