--- a/index.css
+++ b/index.css
@@ -49,8 +49,8 @@ h2 {
 
 h3 {
     font-weight: bold;
-    color: rgba(255, 255, 255, 1);
-    background-color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(0, 0, 0, 0.3);
     border-radius: 25px;
     margin: auto;
     margin-bottom: 20px;
@@ -60,8 +60,8 @@ h3 {
 }
 
 p {
-    color: rgba(255, 255, 255, 1);
-    background-color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(0, 0, 0, 0.3);
     border-radius: 25px;
     margin: auto;
     margin-bottom: 20px;
@@ -70,10 +70,14 @@ p {
 }  
 
 img {
-    max-width: 25%;
-    width: auto;
+    width: 25%;
     margin: auto;
-    display: block;
+    flex-wrap: wrap;
+
+}
+
+img:hover {
+    transition: 0.5s;
 }
 
 
