--- a/index.css
+++ b/index.css
@@ -26,8 +26,8 @@ body {
 
 h1 {
     font-weight: bold;
-    color: rgba(255, 255, 255, 1);
-    background-color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 25px;
     margin: auto;
     margin-bottom: 40px;
@@ -37,8 +37,8 @@ h1 {
 
 h2 {
     font-weight: bold;
-    color: rgba(255, 255, 255, 1);
-    background-color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 25px;
     margin: auto;
     margin-bottom: 30px;
@@ -50,7 +50,7 @@ h2 {
 h3 {
     font-weight: bold;
     color: rgba(255, 255, 255, 0.8);
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 25px;
     margin: auto;
     margin-bottom: 20px;
@@ -69,11 +69,20 @@ p {
     width: max-content;
 }  
 
+.image_flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+
+    width: 100%;
+    height: fit-content;
+}
+
 img {
     width: 25%;
-    margin: auto;
-    flex-wrap: wrap;
-
 }
 
 img:hover {
