--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ p {
 .image_flex {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     align-content: center;
