--- a/index.css
+++ b/index.css
@@ -71,7 +71,7 @@ p {
 
 .image_flex {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
