--- a/index.css
+++ b/index.css
@@ -71,13 +71,14 @@ p {
 
 .image_flex {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     align-content: center;
 
-    width: 100%;
+    width: max-content;
+    max-width: 90%;
     height: min-content;
 }
 
