--- a/index.css
+++ b/index.css
@@ -70,6 +70,8 @@ p {
 }  
 
 .image_flex {
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -77,8 +79,8 @@ p {
     align-items: center;
     align-content: center;
 
-    width: max-content;
     max-width: 90%;
+    min-width: 25%;
     height: min-content;
 }
 
