--- a/index.css
+++ b/index.css
@@ -72,6 +72,7 @@ p {
 .image_flex {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
