--- a/index.css
+++ b/index.css
@@ -76,7 +76,7 @@ p {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     align-content: center;
 
