--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ html {
 body {
     transition: 1s;
     font-size: 18px;
-    margin: 5%;
+    margin: 1%;
     padding: 8px;
 }
 
@@ -70,31 +70,53 @@ p {
 }  
 
 .image_flex {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
+    position: absolute; /* Position it relative to the viewport */
+    top: 0px;
+    left: 50vw; /* Center horizontally */
+    transform: translateX(-50%); /* Center align */
+
+    width: 100vw;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    align-content: center;
+    align-content: top;
 
-    max-width: 90vw;
-    min-width: 25vw;
-    max-height: 80vh;
 }
 
-img {
-    max-width: 25vw;
-    max-height: 20vh;
-    margin: 5px;
+.image_flex img {
+    
+
+    min-width: 10vw;
+    min-height: 10vh;
+    max-height: 20vw;
+    
+    margin: 2vw;
 }
 
-img:hover {
-    transition: 0.5s;
+.yapper {
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: bottom;
 }
 
+.yapper img {
+    position: absolute; /* Position it relative to the viewport */
+    left: 50vw; /* Center horizontally */
+    transform: translateX(-50%); /* Center align */
+    
+    min-width: 16vw;
+    min-height: 15vh;
+    max-height: 20vw;
+}
 
 ol:not(ol ol), ul:not(ul ul) {
     list-style-position: inside;
