--- a/index.css
+++ b/index.css
@@ -72,10 +72,10 @@ p {
 .image_flex {
     position: absolute; /* Position it relative to the viewport */
     top: 0px;
-    left: 50vw; /* Center horizontally */
+    left: 50%; /* Center horizontally */
     transform: translateX(-50%); /* Center align */
 
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -88,8 +88,8 @@ p {
 .image_flex img {
     
 
-    min-width: 10vw;
-    min-height: 10vh;
+    min-width: 10%;
+    min-height: 10%;
     max-height: 20vw;
     
     margin: 2vw;
@@ -110,11 +110,11 @@ p {
 
 .yapper img {
     position: absolute; /* Position it relative to the viewport */
-    left: 50vw; /* Center horizontally */
+    left: 50%; /* Center horizontally */
     transform: translateX(-50%); /* Center align */
     
-    min-width: 16vw;
-    min-height: 15vh;
+    min-width: 16%;
+    min-height: 15%;
     max-height: 20vw;
 }
 
