--- a/index.css
+++ b/index.css
@@ -1,13 +1,3 @@
-:root {
-    --text_important: rgba(0, 0, 0, 0.65);
-    --text_secondary: rgba(0, 0, 0, 0.80);
-    --text_general: rgba(0, 0, 0, 1);
-    --background_important: rgba(255, 255, 255, 0.6);
-    --background_general: rgba(255, 255, 255, 0.2);
-    --borderless: 0px solid rgb(0, 0, 0);
-    --outline_general: 2px solid rgba(255, 255, 255, 0.2);
-}
-
 html {
     background: url("images/background.jpeg") no-repeat;
     background-position: bottom 10% center;
@@ -111,6 +101,8 @@ p {
 }
 
 .yapper {
+    
+
     margin-top: auto;
     margin-left: auto;
     margin-right: auto;
@@ -124,10 +116,10 @@ p {
 }
 
 .yapper img {
-    position: absolute; /* Position it relative to the viewport */
+    position: fixed; /* Position it relative to the viewport */
     left: 50%; /* Center horizontally */
     transform: translateX(-50%); /* Center align */
-    
+    z-index: -1;
     min-width: 16%;
     min-height: 15%;
     max-height: 20vw;
