--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@ html {
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: 'Courier', Courier, monospace;
+    width: 100%;
+    height: 100%;
+    
 }
 
 body {
