--- a/official.css
+++ b/official.css
@@ -1,236 +1,170 @@
 :root {
-    --text_important: rgba(0, 0, 0, 0.65);
-    --text_secondary: rgba(0, 0, 0, 0.80);
-    --text_general: rgba(0, 0, 0, 1);
-    --background_important: rgba(255, 255, 255, 0.6);
-    --background_general: rgba(255, 255, 255, 0.2);
-    --borderless: 0px solid rgb(0, 0, 0);
-    --outline_general: 2px solid rgba(255, 255, 255, 0.2);
-}
+    --polar-night-black: #242931;
+    --polar-night-darkest: #2e3440; /*Used for texts, backgrounds, carets and structuring characters like curly- and square brackets.*/
+    --polar-night-darker: #3b4252; /*Used as a lighter background color for UI elements like status bars.*/
+    --polar-night-dark: #434c5e; /*Highlighting color. Used as selection- and highlight color.*/
+    --polar-night: #4c566a; /*Comments, invisibles, indent- and wrap guide marker. Used as pseudoclass color for disabled elements.*/
+    --snow-storm: #d8dee9; /*Main color for text, variables, constants and attributes. Used as semi-light background.*/
+    --snow-storm-lighter: #e5e9f0; /*Lighter background color for UI elements like status bars. Used as semi-light background.*/
+    --snow-storm-lightest: #eceff4; /*Used for punctuations, carets and structuring characters like curly- and square brackets, background, selection- and highlight color depending on the theme shading design.*/
+    --front-green: #8fbcbb; /*Used for classes, types and documentation tags.*/
+    --frost-aqua: #88c0d0; /*Represents the accent color of the color palette. Main color for primary UI elements and methods/functions.*/
+    --frost-blue: #81a1c1; /*Used for language-specific syntactic/reserved support characters and keywords, operators, tags, units and punctuations like (semi)colons, commas, and braces.*/
+    --frost-bluer: #5e81ac; /*Used for markup doctypes, import/include/require statements, pre-processor statements and at-rules (`@`).*/
+    --aurora-red: #bf616a; /*Used for errors, git/diff deletion and linter marker.*/
+    --aurora-orange: #d08770; /* Used for annotations */
+    --aurora-yellow: #ebcb8b; /*Used for escape characters, regular expressions and markup entities. Used for warnings and git/diff renamings.*/
+    --aurora-green: #a3be8c; /*Main color for strings and attribute values. Used for git/diff additions and success visualizations.*/
+    --aurora-purple: #b48ead; /*Used for numbers.*/
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --text_important: rgba(255, 255, 255, 0.65);
-        --text_secondary: rgba(255, 255, 255, 0.80);
-        --text_general: rgba(255, 255, 255, 1);
-        --background_important: rgba(0, 0, 0, 0.6);
-        --background_general: rgba(0, 0, 0, 0.2);
-        --borderless: 0px solid rgb(0, 0, 0);
-        --outline_general: 2px solid rgba(0, 0, 0, 0.2);
-    }
-}
-
-.image_flex {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.image_flex img {
-    max-width: 100%;
-    height: auto;
-}
+  }
 
 html {
-    background: url("images/background.jpeg") no-repeat;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    font-family: 'Courier New', Courier;
+    font-family: 'Courier New', monospace;
+    background-color: var(--polar-night-black);
 }
 
 body {
-    transition: 0.2s;
-    font-size: 18px;
-    background-color: var(--background_general);
-    margin: 0px;
-    padding: 8px
+    transition: 0.5s;
+    font-size: 2em;
+    margin: 1%;
+    padding: 8px;
 }
 
 h1 {
+    color: var(--snow-storm-light);
+    background-color: var(--polar-night-darkest);
     font-weight: bold;
-    color: var(--text_important);
-    background-color: var(--background_important);
     border-radius: 25px;
-    margin: 2px;
-    margin-top: 40px;
+    margin: auto;
+    margin-bottom: 20px;
     padding: 10px 20px;
-    width: max-content;
+    width: fit-content;
+    max-width: 90%;
 }
 
 h2 {
+    color: var(--snow-storm-light);
+    background-color: var(--polar-night-darkest);
     font-weight: bold;
-    color: var(--text_important);
-    background-color: var(--background_important);
-    border-radius: 22px;
-    margin: 2px;
-    margin-top: 30px;
+    border-radius: 25px;
+    margin: auto;
+    margin-bottom: 20px;
     padding: 10px 20px;
-    text-align: center;
-    width: max-content;
+    width: fit-content;
+    max-width: 90%;
 }
 
 h3 {
+    color: var(--snow-storm-light);
+    background-color: var(--polar-night-darkest);
     font-weight: bold;
-    color: var(--text_important);
-    background-color: var(--background_important);
-    border-radius: 20px;
-    margin: 2px;
-    margin-top: 20px;
+    border-radius: 25px;
+    margin: auto;
+    margin-bottom: 20px;
     padding: 10px 20px;
-    text-align: center;
-    width: max-content;
+    width: fit-content;
+    max-width: 90%;
 }
 
 h4 {
+    color: var(--snow-storm-light);
+    background-color: var(--polar-night-darkest);
     font-weight: bold;
-    color: var(--text_secondary);
-    background-color: var(--background_general);
-    border-radius: 15px;
-    margin: 2px;
-    margin-top: 5px;
+    border-radius: 25px;
+    margin: auto;
+    margin-bottom: 20px;
     padding: 10px 20px;
-    width: max-content;
+    width: fit-content;
+    max-width: 90%;
 }
 
 h5 {
+    color: var(--snow-storm-light);
+    background-color: var(--polar-night-darkest);
     font-weight: bold;
-    color: var(--text_secondary);
-    background-color: var(--background_general);
-    border-radius: 12px;
-    margin: 2px;
-    margin-top: 5px;
+    border-radius: 25px;
+    margin: auto;
+    margin-bottom: 20px;
     padding: 10px 20px;
-    width: max-content;
+    width: fit-content;
+    max-width: 90%;
 }
 
 h6 {
+    color: var(--snow-storm-light);
+    background-color: var(--polar-night-darkest);
     font-weight: bold;
-    color: var(--text_secondary);
-    background-color: var(--background_general);
-    border-radius: 10px;
-    margin: 2px;
-    margin-top: 5px;
+    border-radius: 25px;
+    margin: auto;
+    margin-bottom: 20px;
     padding: 10px 20px;
-    width: max-content;
+    width: fit-content;
+    max-width: 90%;
 }
 
-p:not(blockquote p) {
-    color: var(--text_general);
-    background-color: var(--background_general);
-    border-radius: 5px;
+p {
+    color: var(--snow-storm-light);
+    background-color: var(--polar-night-darkest);
+    border-radius: 25px;
+    margin: auto;
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    min-width: 50%;
+    max-width: 90%;
+    width: auto;
+    height: auto;
+    text-align: center;
+}  
+
+ol:not(ol ol), ul:not(ul ul) {
+    color: var(--snow-storm-light);
+    background-color: var(--polar-night-darkest);
+    list-style-position: inside;
+    border-radius: 15px;
     margin: 10px 20px;
     padding: 10px 15px;
-}
-
-blockquote {
-    color: var(--text_general);
-    background-color: var(--background_general);
-    border-radius: 5px;
-    margin: 10px 20px;
-    padding: 5px 30px;
+    max-width: 90%;
 }
 
 table {
-    border-collapse: separate;
-    background-color: var(--background_general);
-    border: var(--borderless);
-    border-radius: 5px;
-    margin: 10px 20px;
-    padding: 10px 30px;
-}
-
-thead {
-    font-weight: bold;
-    color: var(--text_secondary);
-    border: var(--borderless);
-    background-color: var(--background_general);
-    border-radius: 5px;
-    margin: 2px;
-    padding: 2px;
-}
-
-tbody {
-    color: var(--text_secondary);
-    border: var(--borderless);
-    background-color: var(--background_general);
-    border-radius: 5px;
-    margin: 2px;
-    padding: 2px;
-
-}
-
-th, td, tr {
-    border: var(--borderless);
-    border-radius: 5px;
-    margin: 2px;
-    padding: 10px;
-}
-
-ol:not(ol ol), ul:not(ul ul) {
+    color: var(--snow-storm-light);
+    background-color: var(--polar-night-darkest);
     list-style-position: inside;
-    color: var(--text_secondary);
-    background-color: var(--background_general);
-    border-radius: 5px;
+    border-radius: 15px;
+    margin: auto;
+    margin-bottom: 20px;
+    padding: 10px 15px;
+    max-width: 90%;
+}
+
+td {
+    color: var(--snow-storm-light);
+    background-color: var(--polar-night-darker);
+    list-style-position: inside;
+    border-radius: 15px;
     margin: 10px 20px;
     padding: 10px 15px;
 }
 
-code:not(pre code) {
-    font-family: 'Courier', Courier, monospace;
-    color: var(--text_secondary);
-    background-color: var(--background_general);
-    border-radius: 5px;
-    display: inline-block;
-    margin: 2px;
-    padding: 2px 4px;
+a:link{
+    transition-duration: 0.2s;
+    color: var(--snow-storm-lightest);
+    border-radius: 10px;
+    box-shadow: 0 0 0 6px rgba(0, 0, 0, 0); /* No shadow initially */
 }
 
-pre {
-    font-family: 'Courier', Courier, monospace;
-    color: var(--text_secondary);
-    background-color: var(--background_general);
-    border-radius: 5px;
-    margin: 10px 20px;
-    padding: 4px 6px;
+a:visited {
+    transition-duration: 0.2s;
+    color: var(--snow-storm-lightest);
+    border-radius: 10px;
+    box-shadow: 0 0 0 6px rgba(0, 0, 0, 0); /* No shadow initially */
 }
 
-hr {
-    background-color: var(--background_important);
-    border: var(--borderless);
-    border-radius: 6px;
-    margin: 15px 2px;
-    padding: 3px 3px;
-}
-
-a:link:not(:has(img)) {
-    color: var(--text_general);
-    outline: var(--outline_general);
-    text-decoration: none;
-    outline-offset: -3px;
-    border-radius: 5px;
-    margin: 2px;
-    padding: 2px 6px 0px 6px;
-}
-
-a:visited:not(:has(img)) {
-    color: var(--text_important);
-    outline: var(--outline_general);
-    text-decoration: none;
-    outline-offset: -3px;
-    border-radius: 5px;
-    margin: 2px;
-    padding: 2px 6px 0px 6px;
-}
-
-a:hover:not(:has(img)) {
-    background-color: var(--background_important);
-    outline: var(--outline_general);
-    text-decoration: none;
-    outline-offset: -3px;
-    border-radius: 5px;
-    margin: 2px;
-    padding: 2px 6px 0px 6px;
+a:hover {
+    transition-duration: 0.2s;
+    color: var(--snow-storm);
+    background-color: var(--polar-night-dark);
+    border-radius: 15px;
+    box-shadow: 0 0 0 6px var(--polar-night-dark); /* Add visual effect */
 }
