--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ html {
 
 body {
     transition: 0.5s;
-    font-size: 2em;
+    font-size: 1.2em;
     margin: 1%;
     padding: 8px;
 }
@@ -184,12 +184,12 @@ a:hover:not(:has(img)) {
 
 .image_flex {
     position: absolute; /* Position it relative to the viewport */
-    top: 0px;
+    bottom: 0px;
     left: 50%; /* Center horizontally */
     transform: translateX(-50%); /* Center align */
 
     width: 100%;
-    height: 100%;
+    height: max-content;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -200,8 +200,8 @@ a:hover:not(:has(img)) {
 }
 
 .image_flex img {
-    max-height: 20vw;
-    max-width: 20vh;
+    max-height: 15vw;
+    max-width: 15vh;
     margin: 2vw;
 }
 
