Bruh I just want these to fit right

--- a/index.css
+++ b/index.css
@@ -200,9 +200,9 @@ a:hover:not(:has(img)) {
 }
 
 .image_flex img {
-    max-height: 20vw;
-    max-width: 12vh;
-    margin: 2vw;
+    max-height: 30%;
+    max-width: 15%;
+    margin: 2%;
 }
 
 .yapper {
