--- a/official.css
+++ b/official.css
@@ -26,7 +26,7 @@ html {
 
 body {
     transition: 0.5s;
-    font-size: 16px;
+    font-size: calc(0.5rem + 0.5vw);
     margin: 1%;
     padding: 8px;
 }
