--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-:root {
-    --text-color: rgba(255, 255, 255, 0.9);
-    --background-color: rgba(0, 0, 0, 0.7);
-}
-
 html {
     background: url("images/background.jpeg") no-repeat;
     background-position: bottom 10% center;
@@ -17,86 +12,14 @@ html {
 
 body {
     transition: 0.5s;
-    font-size: 1.2rem;
+    font-size: calc(0.5rem + 1vw);
     margin: 1%;
     padding: 8px;
 }
 
-h1 {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    font-weight: bold;
-    border-radius: 25px;
-    margin: auto;
-    margin-bottom: 20px;
-    padding: 10px 20px;
-    width: fit-content;
-    max-width: 90%;
-}
-
-h2 {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    font-weight: bold;
-    border-radius: 25px;
-    margin: auto;
-    margin-bottom: 20px;
-    padding: 10px 20px;
-    width: fit-content;
-    max-width: 90%;
-}
-
-h3 {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    font-weight: bold;
-    border-radius: 25px;
-    margin: auto;
-    margin-bottom: 20px;
-    padding: 10px 20px;
-    width: fit-content;
-    max-width: 90%;
-}
-
-h4 {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    font-weight: bold;
-    border-radius: 25px;
-    margin: auto;
-    margin-bottom: 20px;
-    padding: 10px 20px;
-    width: fit-content;
-    max-width: 90%;
-}
-
-h5 {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    font-weight: bold;
-    border-radius: 25px;
-    margin: auto;
-    margin-bottom: 20px;
-    padding: 10px 20px;
-    width: fit-content;
-    max-width: 90%;
-}
-
-h6 {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    font-weight: bold;
-    border-radius: 25px;
-    margin: auto;
-    margin-bottom: 20px;
-    padding: 10px 20px;
-    width: fit-content;
-    max-width: 90%;
-}
-
 p {
-    color: var(--text-color);
-    background-color: var(--background-color);
+    color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(0, 0, 0, 0.7);
     border-radius: 25px;
     margin: auto;
     margin-bottom: 20px;
@@ -107,67 +30,6 @@ p {
     height: auto;
     text-align: center;
 }  
-
-ol:not(ol ol), ul:not(ul ul) {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    list-style-position: inside;
-    border-radius: 15px;
-    margin: 10px 20px;
-    padding: 10px 15px;
-    max-width: 90%;
-}
-
-table {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    list-style-position: inside;
-    border-radius: 15px;
-    margin: auto;
-    margin-bottom: 20px;
-    padding: 10px 15px;
-    max-width: 90%;
-}
-
-th {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    list-style-position: inside;
-    border-radius: 15px;
-    margin: 10px 20px;
-    padding: 10px 15px;
-}
-
-a:link:not(:has(img)) {
-    transition-duration: 0.2s;
-    color: var(--text-color);
-    outline-offset: -3px;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 2px 6px 0px 6px;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0); /* No shadow initially */
-}
-
-a:visited:not(:has(img)) {
-    transition-duration: 0.2s;
-    color: var(--text-color);
-    outline-offset: -3px;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 2px 6px 0px 6px;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0); /* No shadow initially */
-}
-
-a:hover:not(:has(img)) {
-    transition-duration: 0.2s;
-    color: var(--text-color);
-    background-color: var(--background-color);
-    outline-offset: -3px;
-    border-radius: 15px;
-    margin: 2px;
-    padding: 2px 6px 0px 6px;
-    box-shadow: 0 0 0 5px var(--background-color); /* Add visual effect */
-}
 
 .speech_bubble {
     position: absolute; /* Position it relative to the viewport */
