--- a/official.css
+++ b/official.css
@@ -139,18 +139,18 @@ td {
 
 a:link{
     transition-duration: 0.2s;
-    color: var(--aurora-purple);
+    color: var(--frost-blue);
     text-decoration: none; 
-    border-radius: 10px;
-    box-shadow: 0 0 0 9px rgba(0, 0, 0, 0); /* No shadow initially */
+    border-radius: 60px;
+    box-shadow: 0 0 6px 9px rgba(0, 0, 0, 0); /* No shadow initially */
 }
 
 a:visited {
     transition-duration: 0.2s;
-    color: var(--aurora-purple);
+    color: var(--frost-blue);
     text-decoration: none; 
-    border-radius: 10px;
-    box-shadow: 0 0 0 9px rgba(0, 0, 0, 0); /* No shadow initially */
+    border-radius: 60px;
+    box-shadow: 0 0 6px 9px rgba(0, 0, 0, 0); /* No shadow initially */
 }
 
 a:hover {
